Fix build warnings in the mediastream code https://bugs.webkit.org/show_bug.cgi?id=161957

Patch by Alejandro G. Castro <alex@igalia.com> on 2016-09-15
Reviewed by Philippe Normand.

* platform/mediastream/MediaConstraints.cpp:
(WebCore::MediaConstraint::create): Added assertion and mock return.
* platform/mediastream/RealtimeMediaSourceSupportedConstraints.cpp:
(WebCore::RealtimeMediaSourceSupportedConstraints::nameForConstraint):
Added assertion and mock return.
(WebCore::RealtimeMediaSourceSupportedConstraints::supportsConstraint):
Added assertion and mock return.

Canonical link: https://commits.webkit.org/180141@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@205965 268f45cc-cd09-0410-ab3c-d52691b4dbfc